added composite multi tenanacy feature